# microservices_v2

./: README.md  pyproject.toml  rbac.yaml  test.py
api_gateway/: .env  Dockerfile  docker-compose.yaml  main.py
api_gateway/alembic/: env.py
api_gateway/alembic/versions/: 2025_12_10_1737-b23199001293_update_new_table2.py  2025_12_15_1744-d7d840cb6e75_update_new_table3.py  2025_12_18_1728-dee96a267ed4_table.py
api_gateway/database/: __init__.py  base.py
api_gateway/gateway/: crud.py  k8s_client.py  models.py  router.py  shemas.py  ws_router.py
api_gateway/settings/: config.py
web_client/: index.html
