[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
asyncpg = "^0.31.0"
greenlet = "^3.3.0"
websockets = "^15.0.1"
redis = "^7.1.0"
alembic = "^1.17.2"
kubernetes = "^34.1.0"
kubernetes-asyncio = "^33.3.0"
websocket-client = "^1.9.0"

